# mx-ide-vscode

./: .gitignore  .mocharc.json  .travis.yml  .vscodeignore  CHANGELOG.md  LICENSE  Makefile  README.md  env.vars  httpPlayground.http  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
.github/: build.yml  release.yml
content/: bootstrap.min.css  credits.txt  debuggerMainView.html  erdpy.html  fontFaces.css  main.css  main.js  mainView.html  models.environment.js  models.js  models.queryTestnet.js  partial.debug.html  partial.debugOnTestnet.html  partial.environment.html  partial.navbar.html  partial.queryTestnet.html  partial.variables.html  style.css  template.buildOptionsDialog.html  template.configureWatchDialog.html  template.deployDialog.html  template.restDialogueItem.html  template.runDialog.html  template.smartContractPanel.html  template.vmOutput.html  template.watchedVariables.html  theme.css  views.buildOptionsDialog.js  views.configureWatchDialog.js  views.debug.js  views.debugOnTestnet.js  views.deployDialog.js  views.environment.js  views.others.js  views.queryTestnet.js  views.restDialogue.js  views.runDialog.js  views.smartContractPanel.js  views.smartContractsList.js
snippets/: README.md  dummy.c  dummy.export  elrond_sc.h  wrc20_arwen.c
snippets/factorial/: Cargo.toml
snippets/factorial/debug/: Cargo.toml
snippets/factorial/debug/src/: main.rs
snippets/factorial/src/: lib.rs
snippets/simple-coin/: Cargo.toml
snippets/simple-coin/debug/: Cargo.toml
snippets/simple-coin/debug/src/: main.rs
snippets/simple-coin/src/: lib.rs
src/: apiClient.ts  botCodeCompletion.ts  botGateway.ts  builder.ts  constants.ts  contracts.ts  customUriHandler.ts  debugger.ts  debuggerMainView.ts  deprecated_nodeDebug.ts  elrondSdk.ts  environment.ts  erdjsSnippets.ts  erdpy.ts  erdpyVersionChecker.ts  errors.ts  eventBus.ts  extension.ts  feedback.ts  help.ts  locator.ts  mainView.ts  myenvironment.ts  myfile.ts  myfolder.ts  nodeDebug.ts  presenter.ts  projects.ts  root.ts  sdk.ts  settings.ts  (+15 more)
(+136 files in other folders)
