[package]
name = "simple-coin"
version = "0.1.0"
authors = ["andrei-marinica <andrei.marinica@elrond.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
name = "wasm"
path = "src/lib.rs"


[dependencies]
# the framework is not currently published, so use relative paths for now
elrond-wasm = { path = "../../elrond-wasm-rs/elrond-wasm" }
elrond-wasm-node = { path = "../../elrond-wasm-rs/elrond-wasm-node" }
elrond-wasm-derive = { path = "../../elrond-wasm-rs/elrond-wasm-derive" }
